@@ -1,7 +1,4 @@
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.Writer;
+import java.io.*;
 import java.util.List;
 
 public class Graph {
@@ -36,6 +33,52 @@ public class Graph {
         String Command = "python /Users/dileepdomakonda/graph.py "+total_records.toString()+" "+
                 total_datapoints+ " "+
                 quickdata + " " + radixdata;
-        Process p = Runtime.getRuntime().exec(Command);
+        //Process p = Runtime.getRuntime().exec(Command);
+        ProcessBuilder processBuilder = new ProcessBuilder();
+
+        // -- Linux --
+
+        // Run a shell command
+        processBuilder.command("bash", "-c", Command);
+
+        // Run a shell script
+        //processBuilder.command("path/to/hello.sh");
+
+        // -- Windows --
+
+        // Run a command
+        //processBuilder.command("cmd.exe", "/c", "dir C:\\Users\\mkyong");
+
+        // Run a bat file
+        //processBuilder.command("C:\\Users\\mkyong\\hello.bat");
+
+        try {
+
+            Process process = processBuilder.start();
+
+            StringBuilder output = new StringBuilder();
+
+            BufferedReader reader = new BufferedReader(
+                    new InputStreamReader(process.getInputStream()));
+
+            String line;
+            while ((line = reader.readLine()) != null) {
+                output.append(line + "\n");
+            }
+
+            int exitVal = process.waitFor();
+            if (exitVal == 0) {
+                System.out.println("Success!");
+                System.out.println(output);
+                //System.exit(0);
+            } else {
+                //abnormal...
+            }
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
     }
 }
